# PaperSmith

./: Cargo.toml  Makefile  README.md  package.json  tailwind.css
.github/ISSUE_TEMPLATE/: bug_report.md  feature-enhancement.md  feature_request.md
.github/workflows/: hashes.yml  release.yml
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/loader/: mod.rs
src-tauri/src/saving/: mod.rs
src/app/buttons/: mod.rs
src/app/modal_system/: mod.rs
src/app/notepad/: mod.rs  zoom_handlers.rs
src/app/settings/: mod.rs
src/app/sidebar/: mod.rs  renaming-modal.rs
src/app/statistic/: mod.rs
src/app/styling/: mod.rs
src/app/wizard/: mod.rs
src/modal-system/: modal.rs
src/notepad/: notepad.rs  zoom_handlers.rs
src/project-wizard/: wizard.rs
src/settings-menu/: settings.rs  switcher.rs
src/sidebar/: buttons.rs  deleting.rs  dropdown.rs  renaming-modal.rs  renaming.rs  sidebar.rs
src/statistics/: statistic.rs  wpm.rs
src/toolbar/: toolbar.rs
