[package]
name = "papersmith-ui"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
shared = { path = "shared" }
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlSelectElement",
  "CssStyleDeclaration",
  "HtmlDocument",
  "HtmlSelectElement",
  "console",
  "Document",
  "Node",
  "Range",
  "Selection",
  "Window",
  "Element",
] }
js-sys = "0.3.77"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
yew_icons = { version = "0.8.0", features = [
  "LucideChevronDown",
  "LucideAlignCenter",
  "LucideAlignJustify",
  "LucideAlignLeft",
  "LucideAlignRight",
  "LucideBaseline",
  "LucideBold",
  "LucideEdit3",
  "LucideFileDown",
  "LucideFilePlus",
  "LucideSettings",
  "LucideFolder",
  "LucideFolderOpen",
  "LucideHighlighter",
  "LucideItalic",
  "LucideList",
  "LucideListChecks",
  "LucideMinus",
  "LucidePlus",
  "LucideQuote",
  "LucideRedo",
  "LucideSave",
  "LucideTrash2",
  "LucideUnderline",
  "LucideUndo",
  "LucideZoomIn",
  "LucideZoomOut",
  "FontAwesomeSolidSwatchbook",
  "LucideBarChart3",
] }
gloo-timers = "0.3.0"
yew-hooks = "0.3.3"
gloo-console = "0.3.0"
chrono = "0.4.39"
text_io = "0.1.12"
pulldown-cmark = "0.12.2"
serde_json = { version = "1.0.137", default-features = false, features = [
  "alloc",
] }
gloo = "0.11.0"
regex = "1.11.1"
yewdux = "0.10.0"
log = "0.4.25"

[workspace]
members = ["shared", "src-tauri"]
